adult/logs/create_fluctuations_15091918_669.out
SLURM_JOBID:  15092590
SLURM_ARRAY_TASK_ID:  669
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 7, 0.005, 320)


